= SeqAn Changelog =

Add a new list item '''AT THE TOP''' for each change (excluding trivial things like changes to whitespace and comments).
Link to changsets with `[CHANGESET-NUMBER]` and tickets with `#TICKET-NUMBER` whenever possible.
You can use Trac wiki syntax.

== Trunk ==

 * Also defining `std::swap` for strings and string sets.
 * Fixing bug in `windowFindNext()`.
 * Setting flags for RelDebug build type correctly for apps.
 * Removed unused and undocumented `string_value_expand.h` / `String<TValue, ValueExpand<...> >`
 * Various comment / formatting / documentation changes and annotations in sequence module.
 * Renaming `string_stack.h` to `string_block.h` and adding header field for author.
 * Adding comment about value expand string, also see #839.
 * Renaming `lexical.h` to `sequence_lexical.h` adding note on the location of `ordValue`, also see #838.
 * Renaming `string_pointer.h` to `adapt_array_pointer.h` and adding some notes for issues to review, e.g. #837.
 * Improving coding style compliance of Array String implementation.
 * Making documentation about assigning to CStyle SeqAn strings more clear, adjusting comments.
 * Documenting `reAlign()`, various small comment and whitespace fixes in consensus module.
 * Comparison operator for tag selector.
 * Experimental BAM reading/writing.
 * Allowing the store elements of fragment stores to be comparable.
 * Adding bundled version of ''samtools''.
 * Fixing documentation for `resize()`, `reAlign()`, `reverse()`, and `score()`.
 * Fixing `lowerBoundAlignedReads()` and `lowerBoundAlignedReads()` when searching by begin and end position.
 * Properly documenting `lowerBoundAlignedReads()` and `upperBoundAlignedReads()`.
 * Fixing documentation about include for ''misc/misc_cmdparser.h'', was ''seqan/misc.h'', corrected to ''seqan/misc/misc_cmdparser.h''.
 * Assertion in semiglobal SWIFT finder that hits begin <= end.
 * Initializing state.errors in Myers Ukkonen banded pattern initialization.
