@@ -102,33 +102,7 @@ struct Value<Rng<MersenneTwister> >
 
 template <>
 struct Value<const Rng<MersenneTwister> > : Value<Rng<MersenneTwister> > {};
-
-template <>
-struct MaxValue<Rng<MersenneTwister> >
-{
-    typedef Rng<MersenneTwister> TMT_;
-    typedef Value<TMT_>::Type TValue_;
-    static const TValue_ VALUE;
-};
-
-const Value<Rng<MersenneTwister> >::Type MaxValue<Rng<MersenneTwister> >::VALUE = MaxValue<Value<Rng<MersenneTwister> >::Type>::VALUE;
-
-template <>
-struct MaxValue<const Rng<MersenneTwister> > : MaxValue<Rng<MersenneTwister> > {};
-
-template <>
-struct MinValue<Rng<MersenneTwister> >
-{
-    typedef Rng<MersenneTwister> TMT_;
-    typedef Value<TMT_>::Type TValue_;
-    static const TValue_ VALUE;
-};
-
-const Value<Rng<MersenneTwister> >::Type MinValue<Rng<MersenneTwister> >::VALUE = MinValue<Value<Rng<MersenneTwister> >::Type>::VALUE;
-
-template <>
-struct MinValue<const Rng<MersenneTwister> > : MinValue<Rng<MersenneTwister> > {};
-
+	
 // ===========================================================================
 // Functions
 // ===========================================================================
